@@ -1,5 +1,6 @@
 Changes for 1.0beta8:
 
+ - user-defined port number for SNMP requests (Alexei)
  - fixed SQL errors when adding host to IT Services (Alexei)
  - added basic support for SLA level in IT Services (Alexei)
  - added chart_sla.php (Alexei)
